--- a/StatusServer/StatusServer.vcxproj
+++ b/StatusServer/StatusServer.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,7 +128,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AsioIOServicePool.cpp" />
+    <ClCompile Include="ConfigMgr.cpp" />
+    <ClCompile Include="message.grpc.pb.cc" />
+    <ClCompile Include="message.pb.cc" />
+    <ClCompile Include="MySqlDao.cpp" />
+    <ClCompile Include="RedisMgr.cpp" />
     <ClCompile Include="StatusServer.cpp" />
+    <ClCompile Include="StatusServiceImpl.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AsioIOServicePool.h" />
+    <ClInclude Include="ConfigMgr.h" />
+    <ClInclude Include="const.h" />
+    <ClInclude Include="message.grpc.pb.h" />
+    <ClInclude Include="message.pb.h" />
+    <ClInclude Include="MySqlDao.h" />
+    <ClInclude Include="RedisMgr.h" />
+    <ClInclude Include="Singleton.h" />
+    <ClInclude Include="StatusServiceImpl.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="config.ini" />
+    <None Include="message.proto" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
