--- a/StatusServer/StatusServer.vcxproj.filters
+++ b/StatusServer/StatusServer.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClInclude Include="StatusServiceImpl.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Defer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="config.ini" />
