--- a/StatusServer/config.ini
+++ b/StatusServer/config.ini
@@ -18,3 +18,11 @@ PoolSize = 5
 Host = 127.0.0.1 
 Port = 6379
 Passwd = root
+[ChatServer1]
+Name = chatserver1
+Host = 127.0.0.1
+Port = 8090
+[ChatServer2]
+Name = chatserver2
+Host = 127.0.0.1
+Port = 8091
